--- a/02-pm.md
+++ b/02-pm.md
@@ -1,3 +1,18 @@
+---
+Title: MoBlo
+Description: Modélisation pour projet BlockChain
+article: Population Map
+Keywords:
+  - BlockChain
+  - Modélisation
+  - MoBlo
+  - Population Map
+  - PM
+  - Carte de la Population
+Contact Information: Hubert MARTEAU @ Worldline
+License: CC BY-NC-ND 4.0
+---
+
 _La licence utilisées pour tous les articles MoBlo est_ [_CC BY-NC-ND 4.0_](https://creativecommons.org/licenses/by-nc-nd/4.0/)
 
 [**Revenir à l'Introduction**](/README.md)
@@ -32,7 +47,7 @@ Dans le cas de la Bibliothèque, on peut trouver 4 types d'acteurs :
 
 * _Central Library_ : La _Bibliothèque Centrale_
 
-* _Libraries_ : Les _Biblitohèques Secondaires_
+* _Libraries_ : Les _Bibliothèques Secondaires_
 
 * _Readers_ : Les _Lecteurs_
 
@@ -42,7 +57,7 @@ L'ensemble des droits peuvent être représentés par la figure suivante :
 
 ![](/Img/PM-Library-Ext.png)_**Figure 2-1 - Population Map - Bibliothèque - étendu**_
 
-Reassons en revue les droits de chaque acteur :
+Repassons en revue les droits de chaque acteur :
 
 * La _Bibliothèque Centrale_ :
 
@@ -66,7 +81,7 @@ Reassons en revue les droits de chaque acteur :
 * Les _Lecteurs_ :
 
   * Ils peuvent se **Connecter** à la BlockChain
-  * Ils peuvent **Envoyer** des travsaction sur la BlockChain
+  * Ils peuvent **Envoyer** des transaction sur la BlockChain
   * Ils peuvent **Recevoir** des transactions sur la BlockChain
 
 * Les autres _Acteurs _ \(non rattaché au système de la Bibliothèque\):
@@ -98,7 +113,7 @@ La liste peut donc être réduite de la façon suivante :
 
 * Les _Lecteurs_ :
 
-  * Ils peuvent **Envoyer** des travsaction sur la BlockChain;
+  * Ils peuvent **Envoyer** des transaction sur la BlockChain;
   * Ils peuvent **Recevoir** des transactions sur la BlockChain.
 
 * Les autres _Acteurs _ \(non rattaché au système de la Bibliothèque\):
@@ -131,26 +146,26 @@ La liste des droits est la suivante :
 
 * Le _Créateur_ du forum :
   * C'est le **Créateur** de la BlockChain;
-  * Il ets **Mineur**;
+  * Il est **Mineur**;
   * Il peut **Envoyer** des transactions dans la BlockChain;
   * Il peut **Recevoir** des transactions dans la BlockChain;
   * Il a le droit d'**Issue** dans la BlockChain;
   * Il peut **Recevoir** en utilisant une autre adresse.
 
-_Note : Le Forum possède un mur, une "ligne éditoriale". Une adresse spécifique est crée à ce titre, pour recevoir toutes les publications. On peut imaginer que chaque éditeur possède sa propre adresse de publication et que le forum possède ainsi plusieurs lignes éditoriales. En fait, techniquement, si une adresse peut recevoir des transactions alors elle peut servir de ligne éditoriale. Il faut noter, avant tout, que le Créateur du Forum est représenté par deux status : le premier possède tous les droits \(ce sont ses droits utilisateurs\); le second ne peut que recevoir des transactions \(c'est la ligne éditoriale\)._
+_Note : Le Forum possède un mur, une "ligne éditoriale". Une adresse spécifique est crée à ce titre, pour recevoir toutes les publications. On peut imaginer que chaque éditeur possède sa propre adresse de publication et que le forum possède ainsi plusieurs lignes éditoriales. En fait, techniquement, si une adresse peut recevoir des transactions alors elle peut servir de ligne éditoriale. Il faut noter, avant tout, que le Créateur du Forum est représenté par deux statut : le premier possède tous les droits \(ce sont ses droits utilisateurs\); le second ne peut que recevoir des transactions \(c'est la ligne éditoriale\)._
 
 _Note : Une adresse qui ne peut que recevoir peut être considérée comme un mur de publication \(une discussion ultérieure compare l'utilisation des transactions à l'utilisation des streams\)._
 
 * Les _Editeurs_ \(qui ont le droit de créer de nouveau sujets\) :
 
   * Ils peuvent **Envoyer** des transactions dans la BlockChain;
-  * Ils peuvent **Recevoir** des transaction dans le BlockChain;
+  * Ils peuvent **Recevoir** des transactions dans le BlockChain;
   * Ils ont le droit d'**Issue** dans la BlockChain.
 
 * Les Lecteurs Abonnés :
 
   * Ils peuvent **Envoyer** des transactions dans la BlockChain;
-  * Ils peuvent **Recevoir** des transaction dans le BlockChain.
+  * Ils peuvent **Recevoir** des transactions dans le BlockChain.
 
 * Les \(simples\) Lecteurs :
 
@@ -172,13 +187,13 @@ Dans cette figure, deux adresses sont partagées par Alice et Bob :
 
 •    La seconde signature a besoin de deux signatures pour envoyer des transactions \(la signature d'Alice et celle de Bob\)
 
-_Note : Plusieurs diagrammes peuvent être utilisés quand plusieurs adresses multisignées se croisent, par exempe : quand une adresse est en 3 x 6 et une autre adresse en 4 x 5, et une autre ... Le principe du diagramme Polupation Map est de clarifier la situation des différents acteurs, plusieurs diagrammes peuvent donc être utilisés pour conserver la clareté dans la représentation de la population._
+_Note : Plusieurs diagrammes peuvent être utilisés quand plusieurs adresses multisignées se croisent, par exemple : quand une adresse est en 3 x 6 et une autre adresse en 4 x 5, et une autre ... Le principe du diagramme Polupation Map est de clarifier la situation des différents acteurs, plusieurs diagrammes peuvent donc être utilisés pour conserver la clarté dans la représentation de la population._
 
 ## 2.5.    Cas particulier : Import de Clé Privée
 
 Dans certains cas, il peut s'avérer nécessaire d'importer la clé privée d'un wallet dans un autre wallet. Le second wallet reçoit ainsi tous les droits du premier et peut agir comme s'il était le premier. C'est une fonctionnalité à utiliser avec beaucoup de prudence.
 
-Dans le diagramme PM, cela se représente pas une simple flèche.
+Dans le diagramme PM, cela se représente par une simple flèche.
 
 ![](/Img/PM-ImportPrK.png)
 
