--- a/03-ga.md
+++ b/03-ga.md
@@ -1,3 +1,18 @@
+---
+Title: MoBlo
+Description: Modélisation pour projet BlockChain
+article: Global Architecture
+Keywords:
+  - BlockChain
+  - Modélisation
+  - MoBlo
+  - Global Architecture
+  - GA
+  - Architecture Globale
+Contact Information: Hubert MARTEAU @ Worldline
+License: CC BY-NC-ND 4.0
+---
+
 _La licence utilisées pour tous les articles MoBlo est_ [_CC BY-NC-ND 4.0_](https://creativecommons.org/licenses/by-nc-nd/4.0/)
 
 [**Revenir à l'Introduction**](/README.md)
@@ -6,11 +21,11 @@ _La licence utilisées pour tous les articles MoBlo est_ [_CC BY-NC-ND 4.0_](htt
 
 # 3.    Global Architecture \(GA\), "l'Architecture Globale"
 
-Lorsque les différentes acteurs sont définis, il est nécessaire de définir l'Architecture Globale. Cette architecture permet de définir comment chaque "application" interagit avec la BlockChain. Cela permet, ainsi, de présenter, de façon explicite, les services externes à mettre en place.
+Lorsque les différents acteurs sont définis, il est nécessaire de définir l'Architecture Globale. Cette architecture permet de définir comment chaque "application" interagit avec la BlockChain. Cela permet, ainsi, de présenter, de façon explicite, les services externes à mettre en place.
 
 ## 3.1.    Eléments d'architecture
 
-Trouvez ci-dessous les éléments qui permettent de définir l'architecture gloable. :
+Trouvez ci-dessous les éléments qui permettent de définir l'architecture globale. :
 
 | Elément de diagramme | Description |
 | :---: | :--- |
@@ -19,23 +34,23 @@ Trouvez ci-dessous les éléments qui permettent de définir l'architecture gloa
 | ![](/Img/GA-Application.png) | **Application** : Application utilisé par un utilisateur de la BlockChain. |
 | ![](/Img/GA-Link.png) | **Lien** : Lien entre le noeud\(wallet\) et l'utilisateur. |
 
-## 3.2.    Le diagramme GA pour le uase case Bibliothèque
+## 3.2.    Le diagramme GA pour le use case Bibliothèque
 
 Dans le cas de la Bibliothèque, chaque Bibliothèque a un intérêt à être directement connecté à la BlockChain.
 
 Les _Lecteurs_ n'ont, par contre, aucune raison de devoir installer ou configurer quoique ce soit sur leur système. Il est donc nécessaire de mettre en place un portail qui leur permet d'accéder au service. Une autre raison de mettre en place le portail est le manque d'intérêt pour les _Lecteurs_ de posséder toutes les données de la BlockChain.
 
-_Note : la mise en place d'un wallet "léger", c'est-à-dire ne possédant que les transactions propres au wallet, peut être présenter comme un service externe. Toutes les BlockChain ne le proposent pas._
+_Note : la mise en place d'un wallet "léger", c'est-à-dire ne possédant que les transactions propres au wallet, peut être présenté comme un service externe. Toutes les BlockChain ne le proposent pas._
 
 Les _Autres_ présentés dans le diagramme Population Map n'ont pas le droit de se connecter à la BlockChain, le portail mis en place doit donc posséder un accès limité.
 
-En plus des acteurs présentés dans le diagramme PM, la mise en palce de batches-scripts peut être nécessaire \(pour créer et envoyer des notifications de retard par mail aux _Lecteurs_ par exemple ou pour gérer les listes de livres devant être envoyés d'une _Bibliothèque_ à l'autre\).
+En plus des acteurs présentés dans le diagramme PM, la mise en place de batches-scripts peut être nécessaire \(pour créer et envoyer des notifications de retard par mail aux _Lecteurs_ par exemple ou pour gérer les listes de livres devant être envoyés d'une _Bibliothèque_ à l'autre\).
 
 ![](/Img/GA-Library.png)
 
 _**Figure 3-1 – GA - Bibliothèque**_
 
-La figure pésente les 3 noeuds ayant des droits d'action sur la BlockChain. La _Bibliothèque Centrale_ \(CL\) et les _Bibliothèques_ secondaires \(L\) sont directement connectées à la BlockChain. Les _Lecteurs_ utilisent un portail pour communiquer avec la BlockChain. Les Batches utilisent l'adresse de la Bibliothèque Centrale pour accéder à la BlockChain.
+La figure présente les 3 noeuds ayant des droits d'action sur la BlockChain. La _Bibliothèque Centrale_ \(CL\) et les _Bibliothèques_ secondaires \(L\) sont directement connectées à la BlockChain. Les _Lecteurs_ utilisent un portail pour communiquer avec la BlockChain. Les Batches utilisent l'adresse de la Bibliothèque Centrale pour accéder à la BlockChain.
 
 ## 3.3.    Diagramme GA pour le use case Forum
 
@@ -53,7 +68,7 @@ Un _Batch_ est considéré comme un service extérieur. Il est positionné à l'
 
 _**Figure 3-3 - GA - Batch**_
 
-Un _SmartContract_ est un "script" positionné au milieu de la BlockChain. Publier un _SmartContract_ dans la BlockChain renvoie l'adresse du _SmartContract_ dans la BlockChain. Un _SmartContract_ peut donc être représenté comme une somple adresse avec un libellé pour indiquer qu'il s'agit d'un _SmartContract_.
+Un _SmartContract_ est un "script" positionné au milieu de la BlockChain. Publier un _SmartContract_ dans la BlockChain renvoie l'adresse du _SmartContract_ dans la BlockChain. Un _SmartContract_ peut donc être représenté comme une simple adresse avec un libellé pour indiquer qu'il s'agit d'un _SmartContract_.
 
 ![](/Img/GA-SC.png)
 
@@ -61,7 +76,7 @@ _**Figure 3-4 - GA - SmartContract**_
 
 _Note : le diagramme GA a pour but finalité de donner une représentation de l'architecture. Le contenu, au sens algorithmique, du Batch ou du SmartContract n'ont pas à être défini par ce diagramme._
 
-## 3.4.    Particular case: Multi-Signature
+## 3.4.    Cas particulier : Multi-Signature
 
 Dans le cas particulier des adresses multisignées, le diagramme GA permet de définir ou redéfinir explicitement les clés publiques concernées.
 
@@ -71,11 +86,11 @@ _**Figure 3-5 - GA - MultiSig**_
 
 La figure illustre qu'Alice utilise une de ces adresses pour signer les transactions d'une adresse multisignée \(M1\) et son autre adresse pour signer les transactions effectuer avec l'autre adresse multisignée \(M2\).
 
-Les libellés, ajoutés au niveaux des adresses mutlisignées, permettent de les distinguer ultérieurement.
+Les libellés, ajoutés au niveau des adresses mutlisignées, permettent de les distinguer ultérieurement.
 
-## 3.6.    Particular case: Channels
+## 3.6.    Cas Particulier : Les Canaux \(Channels\)
 
-Plusieurs BlockChans définissent des Canaux comme des parties fermées d'une BlockChain. On peut donner des droits particuliers à un Canal et donner d'autres droits à un autre. Jamais un Canal n'est inclus dans un autre Canal. Dans le diagramme GA, cela peut être représenté comme différentes BlockChain, chaque BlockChain avec ses propres droits.
+Plusieurs BlockChains définissent des Canaux comme des parties fermées d'une BlockChain. On peut donner des droits particuliers à un Canal et donner d'autres droits à un autre. Jamais un Canal n'est inclus dans un autre Canal. Dans le diagramme GA, cela peut être représenté comme différentes BlockChain, chaque BlockChain avec ses propres droits.
 
-[**Revenir au diagramme de Unit Definition**](/04-ud.md)
+[**Aller au diagramme de Unit Definition**](/04-ud.md)
 
