--- a/05-bt.md
+++ b/05-bt.md
@@ -1,3 +1,18 @@
+---
+Title: MoBlo
+Description: Modélisation pour projet BlockChain
+article: Business Transactions
+Keywords:
+  - BlockChain
+  - Modélisation
+  - MoBlo
+  - Business Transactions
+  - BT
+  - Transactions Métier
+Contact Information: Hubert MARTEAU @ Worldline
+License: CC BY-NC-ND 4.0
+---
+
 _La licence utilisées pour tous les articles MoBlo est_ [_CC BY-NC-ND 4.0_](https://creativecommons.org/licenses/by-nc-nd/4.0/)
 
 [**Revenir à l'Introduction**](/README.md)
@@ -6,7 +21,7 @@ _La licence utilisées pour tous les articles MoBlo est_ [_CC BY-NC-ND 4.0_](htt
 
 # 5.    Business Transactions \(BT\), les "Transactions Métier"
 
-Les parties précédentes donnait une approche en lien avec l'architecture. Elles donnent les moyens de déterminer la population, l'architecture logicielle et l'architecture des données. Cette partie offre un point de vue plus en lien avec le Métier.
+Les parties précédentes donnaient une approche en lien avec l'architecture. Elles donnent les moyens de déterminer la population, l'architecture logicielle et l'architecture des données. Cette partie offre un point de vue plus en lien avec le Métier.
 
 Cette partie présente les transactions qui ont un sens au niveau de la BlockChain. En considérant que la partie technique de la transaction est valide, une transaction peut porter des données dans la BlockChain qui peuvent être utilisées dans des cas non monétaires, donc le jeu de transactions doit être cohérent.
 
@@ -24,9 +39,9 @@ Dans la transaction représentée, Alice envoie à Boob des unités de l'_Asset 
 
 _**Figure 5-2 - BT - Transaction MultiSignée**_
 
-Dans le cas d'une transaction depuis une adresse MultiSignée, l'origine de la transaction peut être indiqué explicitement. Dans la figure qui précède, Alice et Bob envoient à Carol, 10 unités de _A5_ et 6 unités de _A12_ en utilisant la transaction _tz_.
+Dans le cas d'une transaction depuis une adresse MultiSignée, l'origine de la transaction peut être indiquée explicitement. Dans la figure qui précède, Alice et Bob envoient à Carol, 10 unités de _A5_ et 6 unités de _A12_ en utilisant la transaction _tz_.
 
-L'identification des transactions prend son importance quand un sens tient dans une successions de transactions, le flux de transactions peut être ainsi identifié. On n'écrit plus _tz_, mais _t1_, _t2_, _t3_, ...
+L'identification des transactions prend son importance quand un sens tient dans une succession de transactions, le flux de transactions peut être ainsi identifié. On n'écrit plus _tz_, mais _t1_, _t2_, _t3_, ...
 
 ## 5.2.    Le diagramme BT pour le use case Bibliothèque
 
@@ -48,7 +63,7 @@ La _Bibliothèque Centrale \(CL\)_ crée des _Assets_ et les unités d'_Asset_. 
 
 _**Figure 5-5 - BT - Bibliothèque - Centralisation**_
 
-Les livres peuvent être rendus dans n'importe quelle _Bibliothèque_. Ainsi une _Bibliothèque_ peut stocker, à un moment donné, plusieurs copies d'un même livre. Les livres doivent donc être envoyé à la _Bibliothèque Centrale_.
+Les livres peuvent être rendus dans n'importe quelle _Bibliothèque_. Ainsi une _Bibliothèque_ peut stocker, à un moment donné, plusieurs copies d'un même livre. Les livres doivent donc être envoyés à la _Bibliothèque Centrale_.
 
 La réservation d'un livre particulier peut aussi être la raison d'un tel envoi, par exemple si un livre n'est disponible qu'en un seul exemplaire. Si quelqu'un souhaite le lire, alors le livre doit être transférer d'une _Bibliothèque_ à une autre en passant par la _Bibliothèque Centrale_.
 
@@ -76,7 +91,7 @@ A ce niveau-ci de la description, le système est un livre de compte qui permet 
 
 _**Figure 5-8 - BT - Bibliothèque - Réservation**_
 
-La figure qui précède est séquentielle, les transactions sont numéroté de façon à indiquer l'ordre qui doit être suivi.
+La figure qui précède est séquentielle, les transactions sont numérotées de façon à indiquer l'ordre qui doit être suivi.
 
 La Réservation d'un livre permet à un _Lecteur_ de demander un livre particulier dans une _Bibliothèque_ particulière. Il faut garder en mémoire que le Lecteur ne peut utiliser que le Portail Web et seule la _Bibliothèque Central \(CL\)_ peut créer des _Assets_ et des unités d'_Asset_.
 
@@ -106,7 +121,7 @@ Le Forum est un cas beaucoup plus simple limité à deux possibilités : créati
 
 _**Figure 5-10 - BT - Forum - Nouveau Sujet**_
 
-La création d'un nouveau sujet est défini par la création d'un nouvel _Asset_. Cela peut être fait par le _Créateur du Forum \(FC\)_ ou un _Editeur \(E\)_. Quand un un nouveau sujet est ouvert, la personne qui publie crée un nouvel _Asset \(Sni\)_ et envoie une unité de l'_Asset_ sur le _Mur de Publication_. La transaction porte le contenu de la publication qui peut être lu par toute personne ayant la possibilité de se connecter à la BlockChain.
+La création d'un nouveau sujet est définie par la création d'un nouvel _Asset_. Cela peut être fait par le _Créateur du Forum \(FC\)_ ou un _Editeur \(E\)_. Quand un un nouveau sujet est ouvert, la personne qui publie crée un nouvel _Asset \(Sni\)_ et envoie une unité de l'_Asset_ sur le _Mur de Publication_. La transaction porte le contenu de la publication qui peut être lu par toute personne ayant la possibilité de se connecter à la BlockChain.
 
 ![](/Img/BT-Forum-Comment.png)
 
@@ -114,7 +129,7 @@ _**Figure 5-11 - BT - Forum - Commentaire**_
 
 Le _Créateur_ d'un _Asset_ est le propriétaire de cet _Asset_. Il est donc le seul à pouvoir créer de nouvelles unités de cet _Asset_.
 
-Dans cas du Forum, l'intérêt est de suivre lesSujets et les Commentaires sur les Sujets. C'est pour cette raison qu'un même _Asset_ sont utilisés pour le Sujet les Commentaires sur le Sujet. Pour commenter une publication, les personnes ont besoin de demander une unité de l'_Asset_ au _Créateur_ de la publication.
+Dans le cas du Forum, l'intérêt est de suivre lesSujets et les Commentaires sur les Sujets. C'est pour cette raison qu'un même _Asset_ est utilisé pour le Sujet et les Commentaires sur le Sujet. Pour commenter une publication, les personnes ont besoin de demander une unité de l'_Asset_ au _Créateur_ de la publication.
 
 Une _Personne \(P\)_ qui souhaite commenter crée une transaction ne contenant que des données. Ces données indiquent quel est le _Sujet_ qui sera commenté ainsi que la transaction précise qui sera commentée. La transaction est envoyée à l'adresse du _Créateur du Sujet \(FC/E\)_.
 
