--- a/04-ud.md
+++ b/04-ud.md
@@ -1,3 +1,18 @@
+---
+Title: MoBlo
+Description: Modélisation pour projet BlockChain
+article: Unit Definition
+Keywords:
+  - BlockChain
+  - Modélisation
+  - MoBlo
+  - Unit Definition
+  - UD
+  - Définition des Unités
+Contact Information: Hubert MARTEAU @ Worldline
+License: CC BY-NC-ND 4.0
+---
+
 _La licence utilisées pour tous les articles MoBlo est_ [_CC BY-NC-ND 4.0_](https://creativecommons.org/licenses/by-nc-nd/4.0/)
 
 [**Revenir à l'Introduction**](/README.md)
@@ -6,7 +21,7 @@ _La licence utilisées pour tous les articles MoBlo est_ [_CC BY-NC-ND 4.0_](htt
 
 # 4.    Unit Definition \(UD\), la "Définition des Unités"
 
-Les transaction financières utilisent la crypto-monnaie \(monnaie électronique\) dans les transactions BlockChain. La crypto-monnaie sont principalement utilisées dans des projets financiers.
+Les transactions financières utilisent la crypto-monnaie \(monnaie électronique\) dans les transactions BlockChain. Les crypto-monnaies sont principalement utilisées dans des projets financiers.
 
 Les transactions sans crypto-monnaie sont des transactions non-financières, on en distingue deux types.
 
@@ -16,7 +31,7 @@ Les transactions non-définies sont des transactions de la BlockChain n'utilisan
 
 ## 4.1.    Les Définitions
 
-Les définitios permettent de spécifier le type d'Asset qui peuvent être utilisés et leurs cardinalités.
+Les définitions permettent de spécifier le type d'Asset qui peuvent être utilisés et leurs cardinalités.
 
 | Eléments du diagramme | Description |
 | :---: | :--- |
@@ -25,7 +40,7 @@ Les définitios permettent de spécifier le type d'Asset qui peuvent être utili
 
 ## 4.2.    Diagramme UD pour le use case Bibliothèque
 
-Dans le diagramme Population Map, nous avons vu que seule la _Bibliothèque Centrale \(Central Library\)_ était en mesure de créer des _Assets_ \(droit d'Issue\). En regardant en détail le use case, on peut noté que 3 types d'Assets sont nécessaires :
+Dans le diagramme Population Map, nous avons vu que seule la _Bibliothèque Centrale \(Central Library\)_ était en mesure de créer des _Assets_ \(droit d'Issue\). En regardant en détail le use case, on peut noter que 3 types d'Assets sont nécessaires :
 
 •    Le premier type d'_Assets_ est _Nouveau Livre "New Book"_. Cet _Asset_ représente un lot pour un même livre. Si le livre doit être acheté, à nouveau, plus tard, un nouvel _Asset_ sera créé parce qu'il ne s'agira pas du même lot de livres. Ainsi, cet _Asset_ est fermé et la quantité est définie, initialement, par la quantité de livres achetés.
 
@@ -33,11 +48,11 @@ Dans le diagramme Population Map, nous avons vu que seule la _Bibliothèque Cent
 
 _**Figure 4-1 - UD - Bibliothèque**_
 
-•    Le second type d'Assets est la _Réservation "Booking"_. Une unité de cet _Asset_ est utilisée pour représenter la réservation d'un livre particulier par un lecteur particulier dans une Bibliothèque particulière. A l'initialisation du système, le nombre de réservations à gérer simultanément ne peut pas être définis, l'_Asset_ est donc laissé ouvert.
+•    Le second type d'Assets est la _Réservation "Booking"_. Une unité de cet _Asset_ est utilisée pour représenter la réservation d'un livre particulier par un lecteur particulier dans une Bibliothèque particulière. A l'initialisation du système, le nombre de réservations à gérer simultanément ne peut pas être défini, l'_Asset_ est donc laissé ouvert.
 
 •    Le dernier type d'Assets est le _Retard "Delay"_. Les unités de cet _Asset_ sont envoyées aux _Lecteurs_ pour leur indiquer qu'ils sont en retard pour rendre le livre. Comme pour la _Réservation_, le nombre total de _Retards_ simultanés ne peut pas être définis à l'initialisation et il peut évoluer avec le temps, alors l'_Asset_ est laissée ouvert.
 
-Bien faire attention à la façon donc les Assets sont notés dans le diagramme UD. Pour "Booking" et "Delay", les Assets sont déclarés une fois à l'initialisation de la plateforme et, après, les unités de l'Asset sont utilisées. Pour "New Book i", la lettre "i" informe que plusieurs Assets peuvent être créés sur le même modèle, par exemple on peut imagine que l'Asset "Ubik" est créé avec une quantité 5, que l'Asset "H2G2" est créé avec une quantité de 42, ...
+Bien faire attention à la façon donc les Assets sont notés dans le diagramme UD. Pour "Booking" et "Delay", les Assets sont déclarés une fois à l'initialisation de la plateforme et, après, les unités de l'Asset sont utilisées. Pour "New Book i", la lettre "i" informe que plusieurs Assets peuvent être créés sur le même modèle, par exemple on peut imaginer que l'Asset "Ubik" est créé avec une quantité 5, que l'Asset "H2G2" est créé avec une quantité de 42, ...
 
 ## 4.3.    Diagramme UD pour le use case Forum
 
@@ -47,7 +62,7 @@ Le Forum est utilisé pour publier de nouveaux sujets et envoyer des commentaire
 
 _**Figure 4-2 - UD - Forum**_
 
-Un nouveau sujet peut être créé par le _Créateur du Forum_ ou n'importe quel _Editeur_. Les unités d'un même Asset sont utilisés pour envoyer des commentaires sur le sujets.
+Un nouveau sujet peut être créé par le _Créateur du Forum_ ou n'importe quel _Editeur_. Les unités d'un même Asset sont utilisées pour envoyer des commentaires sur le sujets.
 
 Le use case est présenté ici dans un "monde parfait". On pourrait imaginer des _Assets_ supplémentaires comme "_Warning_" ou "_Information_". Le cas est donc limité à la publication de sujets sans qualification particulière.
 
