--- a/03-ga.md
+++ b/03-ga.md
@@ -29,7 +29,7 @@ Trouvez ci-dessous les éléments qui permettent de définir l'architecture glob
 
 | Elément de diagramme | Description |
 | :---: | :--- |
-| ![](/Img/GA-BC.png) | **BlockChain** : Représentation de la BlockChain qui regroupe tous ensemble tous les noeuds d'une même BlockChain. |
+| ![](/Img/GA-BC.png) | **BlockChain** : Représentation de la BlockChain qui regroupe l'ensemble des noeuds d'une même BlockChain. |
 | ![](/Img/GA-ExtServ.png) | **Service Externe** : Représentation d'un service externe qui a besoin d'accéder aux informations contenues dans le BlockChain. |
 | ![](/Img/GA-Application.png) | **Application** : Application utilisé par un utilisateur de la BlockChain. |
 | ![](/Img/GA-Link.png) | **Lien** : Lien entre le noeud\(wallet\) et l'utilisateur. |
