--- a/02-pm.md
+++ b/02-pm.md
@@ -13,7 +13,7 @@ Contact Information: Hubert MARTEAU @ Worldline
 License: CC BY-NC-ND 4.0
 ---
 
-_La licence utilisées pour tous les articles MoBlo est_ [_CC BY-NC-ND 4.0_](https://creativecommons.org/licenses/by-nc-nd/4.0/)
+_La licence utilisée pour tous les articles MoBlo est_ [_CC BY-NC-ND 4.0_](https://creativecommons.org/licenses/by-nc-nd/4.0/)
 
 [**Revenir à l'Introduction**](/README.md)
 
@@ -81,7 +81,7 @@ Repassons en revue les droits de chaque acteur :
 * Les _Lecteurs_ :
 
   * Ils peuvent se **Connecter** à la BlockChain
-  * Ils peuvent **Envoyer** des transaction sur la BlockChain
+  * Ils peuvent **Envoyer** des transactions sur la BlockChain
   * Ils peuvent **Recevoir** des transactions sur la BlockChain
 
 * Les autres _Acteurs _ \(non rattaché au système de la Bibliothèque\):
@@ -113,7 +113,7 @@ La liste peut donc être réduite de la façon suivante :
 
 * Les _Lecteurs_ :
 
-  * Ils peuvent **Envoyer** des transaction sur la BlockChain;
+  * Ils peuvent **Envoyer** des transactions sur la BlockChain;
   * Ils peuvent **Recevoir** des transactions sur la BlockChain.
 
 * Les autres _Acteurs _ \(non rattaché au système de la Bibliothèque\):
@@ -152,7 +152,7 @@ La liste des droits est la suivante :
   * Il a le droit d'**Issue** dans la BlockChain;
   * Il peut **Recevoir** en utilisant une autre adresse.
 
-_Note : Le Forum possède un mur, une "ligne éditoriale". Une adresse spécifique est crée à ce titre, pour recevoir toutes les publications. On peut imaginer que chaque éditeur possède sa propre adresse de publication et que le forum possède ainsi plusieurs lignes éditoriales. En fait, techniquement, si une adresse peut recevoir des transactions alors elle peut servir de ligne éditoriale. Il faut noter, avant tout, que le Créateur du Forum est représenté par deux statut : le premier possède tous les droits \(ce sont ses droits utilisateurs\); le second ne peut que recevoir des transactions \(c'est la ligne éditoriale\)._
+_Note : Le Forum possède un mur, une "ligne éditoriale". Une adresse spécifique est créée à ce titre, pour recevoir toutes les publications. On peut imaginer que chaque éditeur possède sa propre adresse de publication et que le forum possède ainsi plusieurs lignes éditoriales. En fait, techniquement, si une adresse peut recevoir des transactions alors elle peut servir de ligne éditoriale. Il faut noter, avant tout, que le Créateur du Forum est représenté par deux statuts : le premier possède tous les droits \(ce sont ses droits utilisateurs\); le second ne peut que recevoir des transactions \(c'est la ligne éditoriale\)._
 
 _Note : Une adresse qui ne peut que recevoir peut être considérée comme un mur de publication \(une discussion ultérieure compare l'utilisation des transactions à l'utilisation des streams\)._
 
