--- a/04-ud.md
+++ b/04-ud.md
@@ -13,7 +13,7 @@ Contact Information: Hubert MARTEAU @ Worldline
 License: CC BY-NC-ND 4.0
 ---
 
-_La licence utilisées pour tous les articles MoBlo est_ [_CC BY-NC-ND 4.0_](https://creativecommons.org/licenses/by-nc-nd/4.0/)
+_La licence utilisée pour tous les articles MoBlo est_ [_CC BY-NC-ND 4.0_](https://creativecommons.org/licenses/by-nc-nd/4.0/)
 
 [**Revenir à l'Introduction**](/README.md)
 
@@ -31,7 +31,7 @@ Les transactions non-définies sont des transactions de la BlockChain n'utilisan
 
 ## 4.1.    Les Définitions
 
-Les définitions permettent de spécifier le type d'Asset qui peuvent être utilisés et leurs cardinalités.
+Les définitions permettent de spécifier le type d'Asset qui peuvent être utilisés et ses cardinalités.
 
 | Eléments du diagramme | Description |
 | :---: | :--- |
