--- a/05-bt.md
+++ b/05-bt.md
@@ -13,7 +13,7 @@ Contact Information: Hubert MARTEAU @ Worldline
 License: CC BY-NC-ND 4.0
 ---
 
-_La licence utilisées pour tous les articles MoBlo est_ [_CC BY-NC-ND 4.0_](https://creativecommons.org/licenses/by-nc-nd/4.0/)
+_La licence utilisée pour tous les articles MoBlo est_ [_CC BY-NC-ND 4.0_](https://creativecommons.org/licenses/by-nc-nd/4.0/)
 
 [**Revenir à l'Introduction**](/README.md)
 
@@ -51,7 +51,7 @@ La use case Bibliothèque présente un grand nombre de transactions possibles.
 
 _**Figure 5-3 - BT - Bibliothèque - Inscription**_
 
-Les _Lecteurs_ utilisent une un portail Web pour accéder au système d'information. Ainsi, quand un nouveau _Lecteur_ souhaite s'enregistrer, il peut utiliser le portail Web. Dans la figure qui précède, la flèche est en pointillés pour indiquer qu'il ne s'agit pas d'une transaction de la BlockChain mais d'une action extérieure. La modélisation de telles transaction peut être utile pour décrire complètement le use case et rappeler l'importance du portail Web.
+Les _Lecteurs_ utilisent un portail Web pour accéder au système d'information. Ainsi, quand un nouveau _Lecteur_ souhaite s'enregistrer, il peut utiliser le portail Web. Dans la figure qui précède, la flèche est en pointillés pour indiquer qu'il ne s'agit pas d'une transaction de la BlockChain mais d'une action extérieure. La modélisation de telles transactions peut être utile pour décrire complètement le use case et rappeler l'importance du portail Web.
 
 ![](/Img/BT-Library-Distrib.png)
 
@@ -99,9 +99,9 @@ Le _Lecteur \(R\)_ effectue sa demande de réservation en utilisant le Portail W
 
 A présent, le système sait que le livre est attendu dans une _Bibliothèque_ en particulier. Soit "Le livre est déjà dans la Bibliothèque" et il n'y a rien à faire. Soit "Le livre est disponible dans une autre Bibliothèque" alors les batches doivent gérer l'envoi la centralisation du livre vers la Bibliothèque Centrale puis la distribution vers la Bibliothèque destination.
 
-Quand lie livre est disponible dans la Bibliothèque destination, cette _Bibliothèque \(L\)_ envoie l'unité de _Réservation \(K\)_ au _Lecteur \(R\)_ pour lui notifier que le livre l'attend à la _Bibliothèque_. A la fin, lorsque le _Lecteur \(R\)_ vient pour emprunter le livre, l'unité de _Réservation \(K\)_ est renvoyée à la _Bibliothèque Centrale \(CL\)_.
+Quand le livre est disponible dans la Bibliothèque destination, cette _Bibliothèque \(L\)_ envoie l'unité de _Réservation \(K\)_ au _Lecteur \(R\)_ pour lui notifier que le livre l'attend à la _Bibliothèque_. A la fin, lorsque le _Lecteur \(R\)_ vient pour emprunter le livre, l'unité de _Réservation \(K\)_ est renvoyée à la _Bibliothèque Centrale \(CL\)_.
 
-Il faut noter que la première étape de la _Réservation_ est fait vie le Portail Web. Il y a donc une partie métier à implémenter dans le Portail Web. Dans cette partie, une règle peut spécifier le nombre de _Réservation_ qu'un même _Lecteur_ peut faire au même moment. Mais, cette règle n'apparaît pas dans la modélisation BlockChain.
+Il faut noter que la première étape de la _Réservation_ est fait via le Portail Web. Il y a donc une partie métier à implémenter dans le Portail Web. Dans cette partie, une règle peut spécifier le nombre de _Réservation_ qu'un même _Lecteur_ peut faire au même moment. Mais, cette règle n'apparaît pas dans la modélisation BlockChain.
 
 ![](/Img/BT-Library-Delay.png)
 
