--- a/03-ga.md
+++ b/03-ga.md
@@ -74,7 +74,7 @@ Un _SmartContract_ est un "script" positionné au milieu de la BlockChain. Publi
 
 _**Figure 3-4 - GA - SmartContract**_
 
-_Note : le diagramme GA a pour but finalité de donner une représentation de l'architecture. Le contenu, au sens algorithmique, du Batch ou du SmartContract n'a pas à être défini par ce diagramme._
+_Note : le diagramme GA a pour finalité de donner une représentation de l'architecture. Le contenu, au sens algorithmique, du Batch ou du SmartContract n'a pas à être défini par ce diagramme._
 
 ## 3.4.    Cas particulier : Multi-Signature
 
