--- a/05-bt.md
+++ b/05-bt.md
@@ -33,7 +33,7 @@ Chaque transaction possède une origine et une destination. Chaque transaction p
 
 _**Figure 5-1 - BT - Transaction Simple**_
 
-Dans la transaction représentée, Alice envoie à Boob des unités de l'_Asset Aj_ avec un complément de données _dk_ en utilisant la transaction _ti_.
+Dans la transaction représentée, Alice envoie à Bob des unités de l'_Asset Aj_ avec un complément de données _dk_ en utilisant la transaction _ti_.
 
 ![](/Img/BT-MultiSig.png)
 
@@ -136,8 +136,6 @@ Une _Personne \(P\)_ qui souhaite commenter crée une transaction ne contenant q
 Si le Créateur du Sujet décide d'autoriser le commentaire, il envoie à _\(P\)_ une unité de l'_Asset_ référencée dans la demande de commentaire.
 
 A la fin, _\(P\)_ peut envoyer son commentaire sur le _Mur de Publication_ en utilisant l'unité d'_Asset_, en référençant la transaction à commenter et en donnant son commentaire.
-
-At the end, _\(P\)_ can send his comment to the _Publication Wall_ using the unit of _Asset_, referencing the transaction to comment and giving his comment.
 
 [**Aller à la Conclusion**](/06-conclusion.md)
 
